# accidata

./: .gitignore  README.md  pyproject.toml
data/processed/: README.md
data/raw/: README.md
notebooks/: build_dataset.ipynb  eda.ipynb  plot_config.py
