[project]
name = "accidata"
version = "0.1.0"
description = ""
authors = [
    {name = "redsonlopez",email = "redsonlopez@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab (>=4.4.2,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "prophet (>=1.1.6,<2.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "jupyterlab-widgets (>=3.0.15,<4.0.0)"
]

[tool.poetry]
packages = [{include = "accidata", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
